# robo-lukas

./: .env.example  .envrc  .gitignore  README.md  all-tasks.err  pipeline.md  pyproject.toml
docs/: WINDOWS.md
docs/adr/: 0001-microsoft-browser-automation.md
hagetest/: PHHPC-103.json  PHHPC-1294.json  PHHPC-1311.json  PHHPC-1312.json  PHHPC-1313.json  PHHPC-1314.json  PHHPC-1315.json  PHHPC-1316.json  manifest.json
modules/coding-agent/: README.md
modules/git-local/: README.md
modules/jira/: README.md
modules/meetings/: README.md
modules/ms-todo/: README.md
modules/outlook/: README.md
modules/salesforce/: README.md
modules/slack/: README.md
scripts/: chromedriver-for-wsl.ps1  run-outlook.ps1  run-outlook.sh
src/robo_lukas/: __init__.py  microsoft_sso.py
src/robo_lukas/git_local/: __init__.py  __main__.py  cli.py  models.py  reader.py
src/robo_lukas/jira/: __init__.py  __main__.py  cli.py  client.py  models.py  safety.py  session.py
src/robo_lukas/mcp_server/: __init__.py  __main__.py  server.py
src/robo_lukas/ms_todo/: __init__.py  __main__.py  cli.py  investigation.py  models.py  reader.py  safety.py  selectors.py  session.py
src/robo_lukas/outlook/: __init__.py  __main__.py  bridge.py  browser.py  cli.py  models.py  reader.py  safety.py  selectors.py  session.py
workflows/: README.md
